turtleart.housetree.HouseTree.scala.error
Erreur de compilation :
HouseTree:10: error: illegal start of statement (no modifiers allowed here)
  override def run() {
  ^