turtleart.housetree.HouseTree.scala.code
override def run() {
  for (i <- 1 to 4) {
    faireMaison()
    droite(180);avance(40)
  }
}


def faireMaison() {
  override def run() {
  avance(100);droite(30)
  for (i <- 1 to 3) {
    avance(100);droite(120)
  }
  droite(60);avance(100)
  for (j <- 1 to 2) {
    droite(90);avance(100)
  }
}
}